FIX spacing for paragraphs

--- a/resources/scss/ceres/widgets/Common/_item-list-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_item-list-widget.scss
@@ -54,7 +54,8 @@
 {
     h1,
     h2,
-    h3
+    h3,
+    p
     {
         margin: 0;
         text-transform: uppercase;
